# slippers-workshop

./: .coveragerc  .dockerignore  .eslintrc.js  .gitignore  .gitlab-ci.yml  .gitpod.yml  .pre-commit-config.yaml  .prettierignore  .secrets.baseline  Dockerfile  README.md  docker-compose.yml  fabfile.py  gunicorn.conf.py  jest.config.js  manage.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  setup.cfg  tailwind.config.js  tsconfig.json  webpack.config.js
.devcontainer/: devcontainer.json
docker/: bashrc.sh
workshop/: constants.py  urls.py  wsgi.py
workshop/core/: apps.py  blocks.py  context_processors.py
workshop/core/migrations/: 0001_initial.py  0002_socialmediasettings_default_sharing_image.py
workshop/core/models/: __init__.py  base.py  inlines.py  mixins.py  settings.py  snippets.py
workshop/core/tests/: test_context_processors.py
workshop/home/: apps.py  models.py
workshop/home/migrations/: 0001_initial.py  0002_create_homepage.py
workshop/images/: apps.py
workshop/images/migrations/: 0001_initial.py  0003_wagtail30_streamfield_use_json_field.py  0004_wagtail42_images.py
workshop/navigation/: apps.py  models.py
workshop/navigation/migrations/: 0001_initial.py  0002_wagtail30_streamfield_use_json_field.py
workshop/navigation/templatetags/: navigation_tags.py
workshop/project_styleguide/: apps.py  forms.py  views.py
workshop/project_styleguide/templates/: base.html  base_page.html  base_page.yaml  components.yaml
workshop/project_styleguide/templatetags/: navigation_tags.py  (+3 more)
workshop/search/: views.py
workshop/settings/: base.py  dev.py  local.py.example  production.py  test.py
workshop/users/: apps.py  wagtail_hooks.py
workshop/utils/: apps.py  forms.py  models.py  query.py  views.py
(+133 files in other folders)
